# notifications-api-test-project

./: Dockerfile  README.md  default.env  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test_db_dump_file.sql
myproject/: models.py
myproject/accounts/: filters.py  models.py  notification_helper.py  permisions.py  serializers.py  views.py
myproject/accounts/migrations/: 0001_initial.py
myproject/core/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
